--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,10 @@ a:hover {
 	opacity: 0.7 ;
 }
 
-.article a {
+a:visited {
 	color: #000;
 }
+
 
 /*=================================
 	ハンバーガーメニュー
@@ -166,10 +167,6 @@ h1 {
 	width: 100%;
 	margin:  0 auto;
 }
-
-#main_right img {
-	max-width: 100%;
-}
 	
 /*=================================
 	main_area
@@ -279,7 +276,7 @@ h3 {
 }
 	
 .rank a {
-    color: antiquewhite;
+    color: rgb(255, 255, 255);
 }
 	
 #content_area a {
@@ -445,10 +442,6 @@ h1 {
 	width: 100%;
 	margin:  0 auto;
 }
-
-#main_right img {
-	max-width: 100%;
-}
 	
 /*=================================
 	main_area
@@ -563,7 +556,7 @@ h3 {
 }
 	
 .rank a {
-	color: antiquewhite;
+	color: rgb(255, 255, 255);
 }
 	
 /*=================================
@@ -938,7 +931,7 @@ h3 {
 }
 	
 .rank a {
-	color: antiquewhite;
+	color: rgb(255, 255, 255);
 }
 
 .ranking img {
